added tags overview again and delete dialog for tags

--- a/frontend/public/locales/de/translation.json
+++ b/frontend/public/locales/de/translation.json
@@ -1,6 +1,10 @@
 {
-  "breadcrumb": {
-    "dashboard": "Dashboard",
-    "overview": "Recipe Overview",
-  }
+  "label": {
+    "name": "Name",
+    "color": "Color"
+  },
+  "button": {
+    "close": "Abbrechen"
+  },
+  "search-recipe": "Suche Rezept"
 }
