fixed issues and added search combobox for recipes and added tags to create recipe and overview

--- a/frontend/public/locales/en/recipe.json
+++ b/frontend/public/locales/en/recipe.json
@@ -6,7 +6,9 @@
         "detail-description": "Here is the full recipe:",
         "ingredients": "List of all Ingredients",
         "steps": "Instruction:",
-        "step": "Step: "
+        "step": "Step: ",
+        "create-heading": "Create Recipe",
+        "create-description": "Create a recipe with the following form"
     },
     "button": {
         "create": "Create Recipe"
