--- a/frontend/public/locales/de/tag.json
+++ b/frontend/public/locales/de/tag.json
@@ -1,21 +1,21 @@
 {
   "button": {
-    "create": "Stichwort erstellen",
-    "delete": "Stichwort löschen"
+    "create": "Tag erstellen",
+    "delete": "Tag löschen"
   },
   "dialog": {
-    "create-description": "Beschreibung zum Erstellen eines Stichworts",
-    "create-title": "Ein Stichwort erstellen",
-    "delete-description": "Stichwort löschen, kann nicht wiederhergestellt werden",
-    "delete-title": "Stichwort löschen: "
+    "create-description": "Beschreibung zum Erstellen eines Tags",
+    "create-title": "Ein Tag erstellen",
+    "delete-description": "Tag löschen, kann nicht wiederhergestellt werden",
+    "delete-title": "Tag löschen: "
   },
   "heading": {
-    "detail-description": "Hier siehst du alle Rezepte, die mit Stichworten verbunden sind",
-    "detail-title": "Stichwortdetails",
-    "overview-description": "Alle Stichworte sind hier aufgelistet",
-    "overview-title": "Stichwortübersicht"
+    "detail-description": "Hier siehst du alle Rezepte, die mit dem Tag verbunden sind",
+    "detail-title": "Tag Details",
+    "overview-description": "Alle Tags sind hier aufgelistet",
+    "overview-title": "Tag Übersicht"
   },
   "input": {
-    "filter": "Stichwort suchen"
+    "filter": "Tag suchen"
   }
 }
