--- a/frontend/public/locales/de/settings.json
+++ b/frontend/public/locales/de/settings.json
@@ -7,6 +7,6 @@
     "title": "Einstellungen"
   },
   "toast": {
-    "success": "Einstellung erfolgreich geupdated"
+    "success": "Einstellung erfolgreich aktualisiert"
   }
 }
