--- a/frontend/public/locales/de/recipe.json
+++ b/frontend/public/locales/de/recipe.json
@@ -19,7 +19,7 @@
     "detail-heading": "Rezeptdetails",
     "ingredients": "Liste aller Zutaten",
     "overview-description": "Alle Rezepte sind hier aufgelistet",
-    "overview-title": "Rezeptübersicht",
+    "overview-title": "Rezept Übersicht",
     "step": "Schritt: ",
     "steps": "Anleitung:",
     "tags": "Tag:",
