some fixes and added separator to sidebar

--- a/frontend/public/locales/de/translation.json
+++ b/frontend/public/locales/de/translation.json
@@ -38,8 +38,8 @@
     "password": "****"
   },
   "search": {
-    "recipe": "Rezept suchen",
-    "recipe-empty": "Kein Rezept gefunden"
+    "recipes": "Rezept suchen",
+    "recipes-empty": "Kein Rezept gefunden"
   },
   "search-recipe": "Rezept suchen",
   "sidebar": {
