--- a/frontend/public/locales/de/recipe.json
+++ b/frontend/public/locales/de/recipe.json
@@ -1,31 +1,31 @@
 {
-  "button": {
-    "add-tags": "Tags hinzufügen",
-    "back": "Zurück",
-    "create": "Rezept erstellen",
-    "next": "Weiter",
-    "update": "Rezept aktualisieren"
-  },
-  "error": {
-    "amount-not-zero": "Zutatenmenge darf nicht null sein",
-    "ingre-amount": "Zutaten dürfen nicht leer oder null sein",
-    "ingre-name": "Bitte gib einen Namen an",
-    "ingre-unit": "Bitte gib eine Einheit an",
-    "step-length-255": "Schritt darf nicht länger als 255 Zeichen sein",
-    "step-length-zero": "Schritt darf nicht leer sein"
-  },
-  "heading": {
-    "create-heading": "Rezept erstellen",
-    "detail-heading": "Rezeptdetails",
-    "ingredients": "Liste aller Zutaten",
-    "overview-description": "Alle Rezepte sind hier aufgelistet",
-    "overview-title": "Rezept Übersicht",
-    "step": "Schritt: ",
-    "steps": "Anleitung:",
-    "tags": "Tag:",
-    "update-heading": "Rezept aktualisieren"
-  },
-  "input": {
-    "filter": "Rezept suchen"
-  }
+    "button": {
+        "add-tags": "Tags hinzuf\u00fcgen",
+        "back": "Zur\u00fcck",
+        "create": "Rezept erstellen",
+        "next": "Weiter",
+        "update": "Rezept aktualisieren"
+    },
+    "error": {
+        "amount-not-zero": "Zutatenmenge darf nicht null sein",
+        "ingre-amount": "Zutaten d\u00fcrfen nicht leer oder null sein",
+        "ingre-name": "Bitte gib einen Namen an",
+        "ingre-unit": "Bitte gib eine Einheit an",
+        "step-length-255": "Schritt darf nicht l\u00e4nger als 255 Zeichen sein",
+        "step-length-zero": "Schritt darf nicht leer sein"
+    },
+    "heading": {
+        "create-heading": "Rezept erstellen",
+        "detail-heading": "Rezeptdetails",
+        "ingredients": "Liste aller Zutaten",
+        "overview-description": "Alle Rezepte sind hier aufgelistet",
+        "overview-title": "Rezept \u00dcbersicht",
+        "step": "Schritt: ",
+        "steps": "Anleitung:",
+        "tags": "Tag:",
+        "update-heading": "Rezept aktualisieren"
+    },
+    "input": {
+        "filter": "Rezept suchen"
+    }
 }
